[gd_scene load_steps=7 format=3 uid="uid://c3y5mqbx51k1g"]

[ext_resource type="Script" path="res://Scenes/BuildStage.gd" id="1_4xvtj"]
[ext_resource type="Theme" path="res://Assets/tres/MainGUI.tres" id="1_h66it"]
[ext_resource type="Texture2D" uid="uid://cnitut7r478vi" path="res://Assets/IMG_0105.png" id="1_my3tj"]
[ext_resource type="PackedScene" uid="uid://c0axy8g71slr8" path="res://Inventory/InvSlot.tscn" id="1_pcml4"]
[ext_resource type="Texture2D" uid="uid://djxay0ro0cjaf" path="res://Robot/Limbs/Arms/MakeshiftArm.png" id="2_13vnn"]
[ext_resource type="Texture2D" uid="uid://c8opdlu26ssbc" path="res://Robot/Limbs/Legs/MakeshiftLeg.png" id="3_t3v0e"]

[node name="BuildStage" type="Node2D"]
script = ExtResource("1_4xvtj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RegularInventory" type="GridContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -637.0
offset_top = -202.0
offset_right = -140.0
offset_bottom = 204.0
grow_horizontal = 0
grow_vertical = 2
columns = 5

[node name="InvSlot" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot2" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot3" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot4" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot5" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot6" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot7" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot8" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot9" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot10" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot11" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot12" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot13" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot14" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot15" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot16" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot17" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot18" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot19" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot20" parent="CanvasLayer/Control/RegularInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InfiniteInventory" type="GridContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -980.0
offset_top = -203.0
offset_right = -684.0
offset_bottom = -87.0
grow_horizontal = 0
grow_vertical = 2
columns = 5

[node name="InvSlot" parent="CanvasLayer/Control/InfiniteInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot2" parent="CanvasLayer/Control/InfiniteInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="InvSlot3" parent="CanvasLayer/Control/InfiniteInventory" instance=ExtResource("1_pcml4")]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -658.0
offset_top = -155.0
offset_right = -48.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_h66it")
theme_override_font_sizes/font_size = 64
text = "Build 'n' Scale!"

[node name="Skeleton" type="Sprite2D" parent="."]
position = Vector2(473, 419)
scale = Vector2(0.579724, 0.579724)
texture = ExtResource("1_my3tj")

[node name="LeftArm" type="Sprite2D" parent="."]
position = Vector2(209, 477)
scale = Vector2(8.31818, 8.31818)
texture = ExtResource("2_13vnn")

[node name="RightArm" type="Sprite2D" parent="."]
position = Vector2(703, 487)
scale = Vector2(8.31818, 8.31818)
texture = ExtResource("2_13vnn")

[node name="LeftLeg" type="Sprite2D" parent="."]
position = Vector2(343, 754)
scale = Vector2(8.31818, 8.31818)
texture = ExtResource("3_t3v0e")

[node name="RightLeg" type="Sprite2D" parent="."]
position = Vector2(564, 748)
scale = Vector2(8.31818, 8.31818)
texture = ExtResource("3_t3v0e")
